# rotafy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: basic.toml
rotafy/: chore.py  cli.py  config.py  main.py  manager.py  notifier.py  person.py
rotafy/api/: manager.py  notifier.py
rotafy/config/: chore.py  config.py  person.py
rotafy/rota/: assignment.py  printable.py  rota.py  row.py
tests/api/: test_manager.py  test_notifier.py
tests/config/: test_chore.py  test_config.py  test_person.py
tests/rota/: conftest.py  loadable_rota_data.pkl  test_asignment.py  test_printable.py  test_rota.py  test_row.py
